# FrameGraph

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
extensions/framework/: CMakeLists.txt
extensions/glsl_trace/: CMakeLists.txt  Common.h  DebugInfo.cpp  DebugInfo.h  GLSLShaderTrace.cpp  GLSLShaderTrace.h  GLSLShaderTraceTestUtils.h  GLSLShaderTrace_Test1.cpp  ShaderCompiler.cpp  ShaderCompiler.h  ShaderTrace.cpp  ShaderTrace.h  ShaderTrace2.cpp  main.cpp
extensions/graphviz/: CMakeLists.txt  GraphViz.cpp  GraphViz.h
extensions/pipeline_compiler/: CMakeLists.txt  EShaderCompilationFlags.h  PipelineCppSerializer.cpp  PipelineCppSerializer.h  PrivateDefines.h  SpirvCompiler.cpp  SpirvCompiler.h  SpirvCompiler_Resources.cpp  VCachedDebuggableShaderData.h  VPipelineCompiler.cpp  VPipelineCompiler.h
extensions/pipeline_reflection/: CMakeLists.txt  VPipelineReflection.cpp  VPipelineReflection.h
extensions/scene/: BaseSceneApp.cpp  BaseSceneApp.h  CMakeLists.txt  Common.h
extensions/ui/: CMakeLists.txt  Common.h  ImguiRenderer.cpp  ImguiRenderer.h  ImguiSceneRenderer.cpp  ImguiSceneRenderer.h  main.cpp
extensions/video/: CMakeLists.txt  FFMpegLoader.cpp  FFMpegLoader.h  FFmpegRecorder.cpp  FFmpegRecorder.h  IVideoRecorder.h
extensions/vulkan_loader/: CMakeLists.txt  VulkanCheckError.cpp  VulkanCheckError.h  VulkanCommon.cpp  VulkanCommon.h  VulkanLoader.cpp  VulkanLoader.h  fn_vulkan_dev.h  fn_vulkan_inst.h  fn_vulkan_lib.h  vulkanloader.h
framegraph/: CMakeLists.txt  FG.h  VFG.h
framegraph/Public/: BindingIndex.h  BufferDesc.h  BufferView.h  ColorScheme.h  CommandBuffer.h  CommandBufferPtr.h  Config.h  DrawCommandBuffer.h  DrawContext.h  EResourceState.h  FGEnums.h  FrameGraph.h  FrameGraphDrawTask.h  FrameGraphInstance.h  FrameGraphTask.h  FrameGraphThread.h  IDs.h  IPipelineCompiler.h  ImageDesc.h  ImageLayer.h  ImageSwizzle.h  ImageView.h  MemoryDesc.h  MipmapLevel.h  MultiSamples.h  Pipeline.h  PipelineCompiler.h  PipelineResources.h  RayTracingEnums.h  RayTracingGeometryDesc.h  RayTracingSceneDesc.h  RenderPassDesc.h  RenderState.h  RenderStateEnums.h  ResourceEnums.h  SamplerDesc.h  SamplerEnums.h  ShaderEnums.h  SubmissionGraph.h  Types.h  (+4 more)
framegraph/Shared/: BufferViewDesc.cpp  CreateFrameGraph.cpp  EnumToString.h  EnumUtils.h  FrameGraph_Statistics.cpp  HashCollisionCheck.h  ImageDataRange.h  ImageView.cpp  ImageViewDesc.cpp  ImageViewDesc.h  ImageViewDescription.cpp  ImageViewHashMap.h  LocalResourceID.h  LogicalRenderPass.h  Pipeline.cpp  PipelineResources.cpp  PipelineResourcesHelper.h  PipelineResourcesInitializer.h  RenderState.cpp  ResourceBase.h  ResourceDataRange.h  ThreadID.h  Types.h  VertexInputState.cpp
framegraph/Vulkan/: VCommon.h
stl/: CMakeLists.txt  Common.h  Config.h  Defines.h
stl/Algorithms/: ArrayUtils.h  Cast.h  EnumUtils.h  Hash.h  MemUtils.h  StringParser.cpp  StringParser.h  StringUtils.h
stl/CompileTime/: Constants.h  DefaultType.h  Hash.h  Math.h  TypeList.h  TypeTraits.h  UMax.h
stl/Containers/: AlignedBuffer.h  AnyTypeRef.h  Appendable.h  ArrayView.h  BitTree.h  CachedIndexedPool.h  CachedIndexedPool2.h  ChunkedIndexedPool.h  ChunkedIndexedPool2.h  FixedArray.h  FixedMap.h  FixedTupleArray.h  InPlace.h  IndexedPool.h  IndexedPool2.h  Iterators.h  NtStringView.h  Optional.h  PoolAllocator.h  Ptr.h  Singleton.h  StaticString.h  Storage.h  StringView.h  StringViewFwd.h  StructView.h  Union.h  UntypedStorage.h
stl/File/: File.cpp  File.h  HddFile.cpp  HddFile.h  MemFile.h
stl/Log/: Log.cpp  Log.h  TimeProfiler.h  timeprofiler.h
stl/Math/: BitMath.h  Bytes.h  Color.h  Math.h  Matrix.h  Rectangle.h  Vec.h
stl/Memory/: LinearAllocator.h  MemUtils.h  MemWriter.h  PoolAllocator.h  UntypedAllocator.h
stl/Stream/: BufferedStream.h  FileStream.cpp  FileStream.h  MemStream.h  Stream.cpp  Stream.h
stl/ThreadSafe/: AtomicCounter.h  AtomicPtr.h  Barrier.cpp  Barrier.h  DataRaceCheck.h  DoubleBuffer.h  DummyLock.h  LfDoubleBuffer.h  LfFixedList.h  LfFixedStack.h  LfIndexedPool.h  RaceConditionCheck.h  ScopeLock.h  SpinLock.h
stl/include/: ArrayView.h  Bytes.h  Cast.h  Color.h  Common.h  DefaultType.h  Defines.h  EnumUtils.h  File.h  FixedArray.h  FixedMap.h  Hash.h  Log.h  Math.h  MemUtils.h  PoolAllocator.h  Rectangle.h  Singleton.h  StaticString.h  StringUtils.h  TimeProfiler.h  ToString.h  Union.h  Vec.h
stl/source/: File.cpp  Log.cpp
tests/android/: CMakeLists.txt  main.cpp
tests/framegraph/: CMakeLists.txt  FGApp.cpp  FGApp.h  main.cpp
tests/framework/: CMakeLists.txt  FW_Test1.cpp  FW_Test2.cpp  FW_Test3.cpp  main.cpp
tests/glsl_trace/: CMakeLists.txt  GLSLShaderTraceTestUtils.h  GLSLShaderTrace_Test1.cpp  GLSLShaderTrace_Test2.cpp  GLSLShaderTrace_Test3.cpp  GLSLShaderTrace_Test4.cpp  ShaderCompiler.cpp  ShaderCompiler.h  ShaderPerf_Test1.cpp  ShaderTraceTestUtils.cpp  ShaderTraceTestUtils.h  ShaderTrace_Test1.cpp  ShaderTrace_Test10.cpp  ShaderTrace_Test11.cpp  ShaderTrace_Test12.cpp  ShaderTrace_Test13.cpp  ShaderTrace_Test14.cpp  ShaderTrace_Test2.cpp  ShaderTrace_Test3.cpp  ShaderTrace_Test4.cpp  ShaderTrace_Test5.cpp  ShaderTrace_Test6.cpp  ShaderTrace_Test7.cpp  ShaderTrace_Test8.cpp  ShaderTrace_Test9.cpp  main.cpp
tests/pipeline_compiler/: CMakeLists.txt  Test_Annotation1.cpp  Test_Annotation2.cpp  Test_Annotation3.cpp  Test_Annotation4.cpp  Test_ComputeLocalSize1.cpp  Test_MRT1.cpp  Test_MeshShader1.cpp  Test_Optimization1.cpp  Test_PushConst1.cpp  Test_PushConst2.cpp  Test_PushConst3.cpp  Test_RayTracing1.cpp  Test_Reflection1.cpp  Test_Reflection2.cpp  Test_Reflection3.cpp  Test_Reflection4.cpp  Test_Reflection5.cpp  Test_Serializer1.cpp  Test_Serializer2.cpp  Test_Shader1.cpp  Test_Shader10.cpp  Test_Shader11.cpp  Test_Shader12.cpp  Test_Shader13.cpp  Test_Shader14.cpp  Test_Shader15.cpp  Test_Shader16.cpp  Test_Shader17.cpp  Test_Shader2.cpp  Test_Shader3.cpp  Test_Shader4.cpp  Test_Shader5.cpp  Test_Shader6.cpp  Test_Shader7.cpp  Test_Shader8.cpp  Test_Shader9.cpp  Test_ShaderTrace1.cpp  Test_UniformArrays1.cpp  Test_UniformArrays2.cpp  (+3 more)
tests/scene/: SceneApp.h  (+6 more)
(+625 files in other folders)
