
file( GLOB_RECURSE SOURCES "*.*" )
add_library( "Framework" STATIC ${SOURCES} )
source_group( TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${SOURCES} )
target_include_directories( "Framework" PUBLIC ".." )
set_property( TARGET "Framework" PROPERTY FOLDER "Extensions" )

target_link_libraries( "Framework" PUBLIC "STL" )
target_link_libraries( "Framework" PUBLIC "VulkanLoader" )

if (TARGET "GLFW-lib")
	target_link_libraries( "Framework" PUBLIC "GLFW-lib" )
endif()
if (TARGET "SDL2-lib")
	target_link_libraries( "Framework" PUBLIC "SDL2-lib" )
endif()
if (TARGET "OpenVR-lib")
	target_link_libraries( "Framework" PUBLIC "OpenVR-lib" )
endif()
if (${CMAKE_SYSTEM_NAME} STREQUAL "Android")
    target_include_directories( "Framework" PUBLIC "${ANDROID_NDK}/sources/android/native_app_glue" )
endif ()

install( TARGETS "Framework" ARCHIVE DESTINATION "libs/$<CONFIG>" )
install( DIRECTORY "." DESTINATION "include/Framework" FILES_MATCHING PATTERN "*.h*" )
