cmake_minimum_required( VERSION 3.10 FATAL_ERROR )

if (${FG_ENABLE_GLSLANG})
	file( GLOB_RECURSE SOURCES "*.*" )
	add_library( "GLSLTrace" STATIC ${SOURCES} )
	source_group( TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${SOURCES} )
	target_include_directories( "GLSLTrace" PUBLIC "." )
	set_property( TARGET "GLSLTrace" PROPERTY FOLDER "Extensions" )
	target_link_libraries( "GLSLTrace" PUBLIC "STL" )
	target_link_libraries( "GLSLTrace" PUBLIC "GLSLang-lib" )
	install( TARGETS "GLSLTrace" ARCHIVE DESTINATION "libs/$<CONFIG>" )
	install( DIRECTORY "include" DESTINATION "include/GLSLTrace" FILES_MATCHING PATTERN "*.h*" )
endif ()
