cmake_minimum_required( VERSION 3.10 FATAL_ERROR )

if (${FG_ENABLE_SPIRVREFLECT})
	file( GLOB_RECURSE SOURCES "*.*" )
	add_library( "PipelineReflection" STATIC ${SOURCES} )
	source_group( TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${SOURCES} )
	target_include_directories( "PipelineReflection" PUBLIC "." )
	set_property( TARGET "PipelineReflection" PROPERTY FOLDER "Extensions" )
	target_link_libraries( "PipelineReflection" "FrameGraph" )
	target_link_libraries( "PipelineReflection" "SPIRV-Reflect-lib" )
endif ()
