if (TARGET "GLM-lib")
	file( GLOB_RECURSE SOURCES "*.*" )
	add_library( "Scene" STATIC ${SOURCES} )
	source_group( TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${SOURCES} )
	target_include_directories( "Scene" PUBLIC ".." )
	set_property( TARGET "Scene" PROPERTY FOLDER "Extensions" )

	target_link_libraries( "Scene" PUBLIC "FrameGraph" )
	target_link_libraries( "Scene" PUBLIC "Framework" )
	target_link_libraries( "Scene" PUBLIC "GLM-lib" )

	if (TARGET "DevIL-lib")
		target_link_libraries( "Scene" PUBLIC "DevIL-lib" )
	endif()
	if (TARGET "Assimp-lib")
		target_link_libraries( "Scene" PUBLIC "Assimp-lib" )
	endif()
	if (TARGET "PipelineCompiler")
		target_link_libraries( "Scene" PUBLIC "PipelineCompiler" )
	endif()

	target_compile_definitions( "Scene" PUBLIC "FG_SHADER_PATH=R\"(${CMAKE_CURRENT_SOURCE_DIR}/Shaders/)\"" )

	install( TARGETS "Scene" ARCHIVE DESTINATION "libs/$<CONFIG>" )
endif ()
