if (TARGET "ffmpeg-lib")
	file( GLOB_RECURSE SOURCES "*.*" )
	add_library( "Video" STATIC ${SOURCES} )
	source_group( TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${SOURCES} )
	target_include_directories( "Video" PUBLIC ".." )
	set_property( TARGET "Video" PROPERTY FOLDER "Extensions" )
	target_link_libraries( "Video" PUBLIC "STL" )
	target_link_libraries( "Video" PUBLIC "ffmpeg-lib" )

	install( TARGETS "Video" ARCHIVE DESTINATION "libs/$<CONFIG>" )
	install( DIRECTORY "." DESTINATION "include/Video" FILES_MATCHING PATTERN "*.h*" )
endif ()
