cmake_minimum_required( VERSION 3.10 FATAL_ERROR )

file( GLOB_RECURSE SOURCES "*.*" )
if (DEFINED ANDROID)
	add_library( "Tests.Framework" SHARED ${SOURCES} )
else()
	add_executable( "Tests.Framework" ${SOURCES} )
endif()
source_group( TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${SOURCES} )
set_property( TARGET "Tests.Framework" PROPERTY FOLDER "Tests" )
target_link_libraries( "Tests.Framework" "Framework" )
add_test( NAME "Tests.Framework" COMMAND "Tests.Framework" )
