if (TARGET "PipelineReflection" AND TARGET "PipelineCompiler")
	file( GLOB_RECURSE SOURCES "*.*" )
	add_executable( "Tests.PipelineReflection" ${SOURCES} )
	source_group( TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${SOURCES} )
	set_property( TARGET "Tests.PipelineReflection" PROPERTY FOLDER "Tests" )
	target_link_libraries( "Tests.PipelineReflection" PUBLIC "PipelineReflection" )
	target_link_libraries( "Tests.PipelineReflection" PUBLIC "PipelineCompiler" )

	add_test( NAME "Tests.PipelineReflection" COMMAND "Tests.PipelineReflection" )
endif ()
