cmake_minimum_required( VERSION 3.10 FATAL_ERROR )

if (${FG_ENABLE_GLM})
	file( GLOB_RECURSE SOURCES "*.*" )
	if (DEFINED ANDROID)
		add_library( "Tests.Scene" SHARED ${SOURCES} )
	else()
		add_executable( "Tests.Scene" ${SOURCES} )
	endif()
	source_group( TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${SOURCES} )
	set_property( TARGET "Tests.Scene" PROPERTY FOLDER "Tests" )
	target_link_libraries( "Tests.Scene" "Scene" )
	
	add_test( NAME "Tests.Scene" COMMAND "Tests.Scene" )
endif ()
