if (TARGET "UI")
	file( GLOB_RECURSE SOURCES "*.*" )
	if (DEFINED ANDROID)
		add_library( "Tests.UI" SHARED ${SOURCES} )
	else()
		add_executable( "Tests.UI" ${SOURCES} )
	endif()
	source_group( TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${SOURCES} )
	set_property( TARGET "Tests.UI" PROPERTY FOLDER "Tests" )
	target_link_libraries( "Tests.UI" "UI" )
	
	if (NOT FG_CI_BUILD)
		add_test( NAME "Tests.UI" COMMAND "Tests.UI" )
	endif ()
endif ()
